# JOJOSoul-ng

./: .dockerignore  .gitignore  .pagesignore  DEVELOPMENT.md  IFLOW.md  JOJOSoul-ng.py  JOJOSoul.spec  LICENSE  README.md  RELEASE.md  demo_independent_experience.py  display_manager.py  final_terminal_test.py  index.html  pyproject.toml  requirements.txt  simple_demo.py  simple_terminal_final.py  style.css  test_display.py  test_independent_modes.py  test_release_output.md  test_terminal_working.py
.github/workflows/: build.yml  cross-platform.yml  nightly.yml  release.yml
icons/: README.md
linux/: BUILD.md  Dockerfile.amd64  Dockerfile.arm64  build-deb.sh  josoul.desktop
mobile/: README.md  app.py  display_manager_mobile.py
scripts/: generate_release.py
tests/: test_core.py  test_game.py  test_player.py  test_release_reader.py
utils/: __init__.py  release_reader.py
web/: coi-serviceworker.js  index.html  script.js  style.css  worker.js
