[project]
name = "JOJOSoul-ng"
version = "1.0.2"
description = "基于 Python 的 JOJO 奇妙冒险同人游戏"
authors = [
    {name = "YricOTF"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Role-Playing",
]

[tool.black]
line-length = 79
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79

[tool.flake8]
max-line-length = 79
extend-ignore = ["E203", "W503", "E402"]
per-file-ignores = [
    "tests/*:E402",  # 测试文件需要在运行时导入模块
]
exclude = [
    ".git",
    "__pycache__",
    "venv",
    "build",
    "dist"
]